--- a/backend/.env
+++ b/backend/.env
@@ -1,12 +1,12 @@
 
 PORT=5000
-MONGO_URI=
-JWT_SECRET=
+MONGO_URI=mongodb+srv://codermitranp_db_user:FbcevY4Em1cK4Zoi@cluster0.ct7otjd.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=bERADVG64B654NEBBAVESSFAZSF
 CLIENT_URL=http://localhost:3000
 
-CLOUDINARY_CLOUD_NAME=
-CLOUDINARY_API_KEY=
-CLOUDINARY_API_SECRET=
+CLOUDINARY_CLOUD_NAME=dkmm90uws
+CLOUDINARY_API_KEY=697893684153872
+CLOUDINARY_API_SECRET=acpmpOuCPOrfjd3Wu0O2Elewzdw
 
 PAYPAL_CLIENT_ID=
 PAYPAL_SECRET_ID=
